@@ -63,6 +63,8 @@ Library
 Build
 -----
 
+- Issue #4289: Remove Cancel button from AdvancedDlg.
+
 - Issue #1656675: Register a drop handler for .py* files on Windows.
 
 - Issue #4120: Exclude manifest from extension modules in VS2008.
